--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
 			hx-indicator=".htmx-indicator" hx-target="#result"
 			hx-trigger="load delay:100ms, keyup changed delay:500ms, search"
 			hx-on::after-request="const url = new URL(location); url.searchParams.set('softwarename', this.value); history.pushState({}, '', url);"
-			name="search" nunjucks-template="softwares" placeholder="Search blogs..." type="search" />
+			name="search" nunjucks-template="softwares" placeholder="Search softwares..." type="search" />
 		<template id="softwares">
 			<!-- count -->
 			{% if not prev %}
