--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 		// Set the value of the 'search-input' element to the 'search' parameter from the URL if it exists
 		htmx.onLoad(function () {
 			const urlParams = new URLSearchParams(window.location.search);
-			const query = urlParams.get("search");
+			const query = urlParams.get("softwarename");
 			if (query) {
 				document.getElementById("search-input").value = query;
 			}
@@ -47,14 +47,16 @@
 	<div hx-ext="client-side-templates">
 		<input id="search-input" autofocus hx-get="http://localhost:8080/softwares/search/softwarenameContaining"
 			hx-indicator=".htmx-indicator" hx-target="#result"
-			hx-trigger="load delay:100ms, keyup changed delay:500ms, search"
+			hx-trigger="load delay:100ms, keyup changed delay:500ms, softwarename"
 			hx-on::after-request="const url = new URL(location); url.searchParams.set('softwarename', this.value); history.pushState({}, '', url);"
-			name="search" nunjucks-template="softwares" placeholder="Search softwares..." type="search" />
+			name="softwarename" nunjucks-template="softwares" placeholder="Search softwares..." type="search" />
 		<template id="softwares">
 			<!-- count -->
 			{% if not prev %}
 			<i> Found {{ page.totalElements }} softwares.</i>
 			{% endif %}
+			
+			
 
 			<!-- results -->
 			{% for software in _embedded.softwares %}
