--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
 		<template id="softwares">
 			<!-- count -->
 			{% if not prev %}
-			<i> Found {{ page.totalElements }} softwares.</i>
+			<i> Found {{ page.totalElements }} software(s).</i>
 			{% endif %}
 			
 			
